# piccolo

./: COMPATIBILITY.md  Cargo.toml
debugger/: Cargo.toml
debugger/examples/: simple_debug.rs
debugger/src/: adapter.rs  breakpoints.rs  error.rs  lib.rs  location.rs  session.rs  stop_reason.rs  watch.rs
debugger/src/session/: debug.rs  request.rs  response.rs
debugger/src/watch/: entry.rs  mode.rs  spec.rs
examples/: interpreter.rs
src/: closure.rs  error.rs  lib.rs  meta_ops.rs
src/compiler/: lexer.rs  parser.rs
src/stdlib/: base.rs  math.rs  mod.rs  string.rs  table.rs  utf8.rs
src/stdlib/string/: format.rs  pack.rs  packsize.rs  unpack.rs
src/stdlib/string/format/: parser.rs
src/thread/: executor.rs  mod.rs  thread.rs  vm.rs
tests/: goldenscripts.rs
tests/goldenscripts/: close-multiple.lua  close-unimpl.lua  const1.lua  const3.lua  const4.lua  const5.lua
